--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,29 @@
     background-color: #121214;
 }
 .container-form {
-    padding: 64px;
+    max-width: 738px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+section {
+    margin-top: -140px;
+}
+
+.form {
     background-color: #FAFAFC;
+    padding: 64px;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+h1 {
+    font-size: 2.5rem;
+    color: #fff;
+}
+p {
+    color: #fff;
 }
